--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ./src/**/*.{ts,tsx} App.tsx --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
+    "@expo/metro-config": "^0.7.1",
     "@expo/webpack-config": "^0.17.0",
     "@ungap/url-search-params": "^0.2.2",
     "expo": "~46.0.19",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
+    "graphql": "^15.8.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
