--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-config": "^0.7.1",
     "@expo/webpack-config": "^0.17.0",
     "@ungap/url-search-params": "^0.2.2",
+    "dotenv": "^16.0.3",
     "expo": "~46.0.19",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
