--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.7.10",
     "@expo/metro-config": "^0.7.1",
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@ungap/url-search-params": "^0.2.2",
     "dotenv": "^16.0.3",
     "expo": "~46.0.19",
