--- a/package.json
+++ b/package.json
@@ -7,7 +7,20 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ./src/**/*.{ts,tsx} App.tsx --no-error-on-unmatched-pattern"
+    "lint": "eslint ./src/**/*.{ts,tsx} App.tsx --no-error-on-unmatched-pattern",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.tsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
@@ -30,11 +43,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.19.1",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^11.5.4",
+    "@types/jest": "^29.4.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "eslint": "^8.35.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-native": "^4.0.0",
+    "jest": "^29.5.0",
+    "jest-expo": "^48.0.2",
+    "react-test-renderer": "^18.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
