--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@expo/metro-config": "^0.7.1",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "2.4.2",
     "@ungap/url-search-params": "^0.2.2",
     "dotenv": "^16.0.3",
     "expo": "~46.0.19",
@@ -34,13 +35,17 @@
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
+    "install": "^0.13.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-paper": "^5.4.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.8.2",
-    "yup": "^1.0.2",
-    "@react-native-picker/picker": "2.4.2"
+    "use-debounce": "^9.0.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
