--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-paper": "^5.4.0",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.8.2",
